update duration in tests